fixed name clipping issue

--- a/style.css
+++ b/style.css
@@ -4,6 +4,7 @@ body {
 
 h2 {
     text-align: center;
+    font-variant: small-caps;
 }
 
 #start {
